Cards can be expanded/collapsed, table spacing fixed

--- a/RGCustomerClient/modules/users/client/css/users.css
+++ b/RGCustomerClient/modules/users/client/css/users.css
@@ -78,10 +78,7 @@ New Stuff
 }
 
 .center-buttons {
-  margin-top: auto;
-  margin-bottom: auto;
-  margin-left: 7px;
-  margin-right: 7px;
+  martin: auto 7px auto 7px;
   position: relative;
   float: left;
 }
@@ -255,7 +252,6 @@ button.round{
   border-radius:100%;
   background:#20307B;
   border:none;
-  outline:none;
   color: white;
   font-size:36px;
   text-align: center;
@@ -320,7 +316,6 @@ Scrollable admin permissions select
 
 button.material {
   border: none;
-  outline: none;
   cursor: pointer;
   overflow: hidden;
   -webkit-user-select: none;
@@ -336,7 +331,6 @@ button.transparent {
   border: none;
   cursor:pointer;
   overflow: hidden;
-  outline:none;
   padding: 5px;
 }
 
@@ -362,18 +356,22 @@ button.transparent:hover,button.transparent:focus,button.transparent:active {
   background: rgba(0,0,0,.25);
   border-radius: 100%;
   -webkit-transform: scale(0);
+  -moz-transform: scale(0);
   -ms-transform: scale(0);
+  -o-transform: scale(0);
   transform: scale(0);
   pointer-events: none;
 }
 
 .ripple.show {
   -webkit-animation: ripple .5s ease-out;
+  -moz-animation: ripple .5s ease-out;
   animation: ripple .5s ease-out;
 }
 @-webkit-keyframes
 ripple { to {
  -webkit-transform: scale(1.5);
+ -moz-transform: scale(1.5);
  transform: scale(1.5);
  opacity: 0;
 }
@@ -381,6 +379,7 @@ ripple { to {
 @keyframes
 ripple { to {
  -webkit-transform: scale(1.5);
+ -moz-transform: scale(1.5);
  transform: scale(1.5);
  opacity: 0;
 }
